--- a/RB_PAM_TUGAS1_119140082.html
+++ b/RB_PAM_TUGAS1_119140082.html
@@ -31,6 +31,8 @@
 
     <h2>Tugas Individu 1 HTML Table</h2>
 
+    <p>Link Github : https://github.com/EllyaRosanti/Tugas1-PAM</p>
+
     <table>
       <tr>
         <th>No</th>
